<resources>
    <string name="app_name">My Application</string>
    <string name="text">SMS 문자</string>
    <string name="call">CallBack 설정</string>
    <string name="separate">분활</string>
    <string name="reserve_date">예약 날짜:</string>
    <string name="group">그룹선택</string>
    <string name="individual">개인선택</string>
    <string name="instant">즉시발송</string>
    <string name="reserve">예약발송</string>
    <string name="save">문자 저장</string>
    <string name="get">불러오기</string>
    <string name="text_hint">문자 내용:</string>
    <string name="Choice_List">목록 선택</string>
    <string name="send">전송</string>
    <string name="list">선택 연락처 수: </string>
    <string name="nothing">0명</string>
    <string name="cancel">취소</string>
    <string name="okay">선택 완료</string>
    <string name="choice_num">선택 항목 수: 0</string>
    <string name="split_num">분활 수:</string>
    <string name="auto">자동발송 사용</string>
    <string name="inst">- 설정 시 통화 종료 후 지정 문자 발송.\n- 비 설정 시 통화 종료 후 문자 선택.
    </string>
    <string name="complete">설정 완료</string>
    <string name="enableText">문자 보내기 활성화</string>
    <string name="autoHint">자동 문자 내용:</string>
    <string name="poptitle">수동 문자 발송</string>

    <string name="missAuto">자동 부제중 문자</string>
    <string name="callAuto">자동 통화시 문자</string>

    <string name="selecTitle">선택 문자 제목: </string>
</resources>