<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".TextingActivity">

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/send" />

    <CheckBox
        android:id="@+id/split_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/send"
        android:layout_alignParentStart="false"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/instant"
        android:includeFontPadding="false"
        android:text="@string/separate"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:text="@string/group"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/individual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/group"
        android:text="@string/individual"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/instant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/send"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/instant"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_List"

        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="top"
        android:hint="@string/text_hint"
        android:inputType="none"
        android:isScrollContainer="true"
        android:maxLength="139" />

    <Button
        android:id="@+id/save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/instant"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/save"
        android:textSize="18sp" />

    <Button
        android:id="@+id/get_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/instant"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/save_text"
        android:text="@string/get"
        android:textSize="18sp" />

    <Button
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/individual"
        android:text="@string/Choice_List"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:text="@string/list"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/select_List"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/textView2"
        android:text="@string/nothing"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/split_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/send"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/split_check"
        android:ems="10"
        android:hint="@string/split_num"
        android:inputType="number" />


</RelativeLayout>