<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#eeeeee"
    android:orientation="vertical">

    <!-- 타이틀바 -->
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#03A9F4"
            android:gravity="center"
            android:text="@string/poptitle"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/numtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:background="#03A9F4"
            android:gravity="center"
            android:textColor="@color/white" />
    </RelativeLayout>
    <!-- //end 타이틀바 -->

    <!-- Notice -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:alpha="0.87"
            android:gravity="start"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>
    <!-- Notice -->

    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- 닫기 버튼 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popokay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#00BCD4"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/popcancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:backgroundTint="#E91E63"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/poplist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/popokay"
            android:layout_toEndOf="@id/popcancel"
            android:text="@string/Choice_List" />

    </RelativeLayout>
    <!--// 닫기 버튼 -->
</LinearLayout>